<resources>
    <string name="assist_gesture_title">Active Edge</string>
    <string name="aware_category_display" />
    <string name="aware_category_gesture" />
    <string name="aware_display_settings_title">Idle lock screen</string>
    <string name="aware_settings_description" />
    <string name="aware_settings_summary" />
    <string name="aware_settings_title">Aware Settings</string>
    <string name="advanced_battery_graph_subtext">Battery left estimate is based on your device usage</string>
    <string name="gesture_silence_title">Silence alerts gesture</string>
    <string name="gesture_skip_title">Skip gesture</string>
    <string name="gesture_tap_title">Tap Gesture</string>
    <string name="keywords_touch_sensitivity">touch, sensitivity, sensitive, screen protector, film, responsive, responsiveness</string>
    <string name="keywords_wake_display" />
    <string name="touch_sensitivity_summary">Increase touch sensitivity and improve touch when using a screen protector</string>
    <string name="touch_sensitivity_title">Screen protector mode</string>
    <string name="columbus_title">Quick Tap to start actions</string>
    <string name="accessibility_assist_gesture_complete_or_keep_adjusting">Active Edge set up. Go to the next screen or keep adjusting.</string>
    <string name="accessibility_keyboard_haptics_title">Keyboard haptics</string>
    <string name="adaptive_battery_switch_des">To extend battery life, Adaptive Battery may reduce performance and background activity. Some notifications may be delayed.</string>
    <string name="adaptive_battery_switch_title">Use Adaptive Battery</string>
    <string name="account_confirmation_class">com.google.android.gms.auth.uiflows.factoryreset.PreFactoryResetActivity</string>
    <string name="account_confirmation_package">com.google.android.gms</string>
    <string name="account_type">com.google</string>
    <string name="adaptive_alert_vibration_summary">Reduces vibration strength while your phone is still and the screen is facing up</string>
    <string name="adaptive_alert_vibration_title">Adaptive alert vibration</string>
    <string name="adaptive_charging">Adaptive Charging</string>
    <string name="adaptive_charging_title">Adaptive Charging</string>
    <string name="adaptive_charging_description">Extend battery lifespan by charging steadily during longer charging periods. Activated based on your usage cycle.</string>
    <string name="adaptive_charging_footer">To help extend battery lifespan, your phone learns your charging routine and waits until you need it to fully charge.</string>
    <string name="adaptive_charging_link_a11y">Learn more about Adaptive Charging</string>
    <string name="adaptive_charging_main_switch_title">Use Adaptive Charging</string>
    <string name="adaptive_charging_time_estimate"><b>Adaptive Charging</b> • Full by %1$s</string>
    <string name="ambient_display_wake_screen_footer"><annotation link="link">Preferences</annotation></string>
    <string name="ambient_display_wake_screen_summary" />
    <string name="add_bypassed_application_hint">No apps added</string>
    <string name="advanced_vpn_preference_group_title">Built-in</string>
    <string name="all_apps_category_title">All apps</string>
    <string name="allow_debugging_data_description">Google uses bug reports to diagnose app and device issues in accordance with our <a href="https://policies.google.com/privacy">Privacy Policy</a>".

"<b>Bug reports contain app and system logs</b>" and may include personal and device information, such as names, email addresses, phone numbers, location data, device identifiers, connected devices, and network information. Reports may be shared with engineering partners potentially impacted by your issue.

Granting access will allow this app to "<b>automatically collect and upload bug reports</b>" containing app and system logs for all issue reports.

Revoking access will require the app to request your permission to collect and upload a bug report for each individual issue report."</string>
    <string name="ambient_display_wake_screen_summary_on" />
    <string name="app_and_notification_dashboard_summary">Assistant, recent apps, default apps</string>
    <string name="assist_gesture_enrollment_continue_to_assistant">Continue to Assistant</string>
    <string name="assist_gesture_enrollment_do_it_later">Do it later</string>
    <string name="assist_gesture_enrollment_seekbar_light">Light squeeze</string>
    <string name="assist_gesture_enrollment_seekbar_strong">Firm squeeze</string>
    <string name="assist_gesture_enrollment_settings">Settings</string>
    <string name="assist_gesture_setting_enable_assistant_text">To talk to your Assistant, quickly squeeze the bottom half of your phone, then release</string>
    <string name="assist_gesture_setting_enable_assistant_title">Squeeze for your Assistant</string>
    <string name="assist_gesture_setting_enable_ring_alarm_silence_text">Squeeze to silence alarms, timers, notifications, and incoming calls</string>
    <string name="assist_gesture_setting_enable_ring_silence_text">Squeeze to silence notifications and incoming calls</string>
    <string name="assist_gesture_setting_enable_ring_silence_title">Squeeze to silence phone</string>
    <string name="assist_gesture_setting_enable_wake_title">Open Assistant when screen is off</string>
    <string name="assist_gesture_squeeze_help_maximum_sensitivity">Light squeeze</string>
    <string name="assist_gesture_squeeze_help_minimum_sensitivity">Firm squeeze</string>
    <string name="assist_gesture_squeeze_sensitivity_label">Squeeze sensitivity</string>
    <string name="assist_gesture_training_enrolling_error_may_cause_falsing">May bring up Assistant accidentally</string>
    <string name="assist_gesture_training_enrolling_error_squeeze_bottom">Squeeze the bottom half of your phone</string>
    <string name="assist_gesture_training_enrolling_error_squeeze_faster">Squeeze faster</string>
    <string name="assist_gesture_training_enrolling_error_squeeze_harder">Squeeze harder</string>
    <string name="assist_gesture_training_enrolling_error_squeeze_release_quickly">Squeeze quickly and then release</string>
    <string name="assist_gesture_training_enrolling_error_try_adjusting">Try adjusting the slider</string>
    <string name="assist_gesture_training_enrolling_text">Squeeze the bottom half of your phone. You can adjust how strongly you need to squeeze.</string>
    <string name="assist_gesture_training_enrolling_title">Squeeze quickly and release</string>
    <string name="assist_gesture_training_finished_text">You can also change the squeeze sensitivity later in Settings</string>
    <string name="assist_gesture_training_finished_title">Finish up or keep adjusting</string>
    <string name="assist_gesture_training_intro_text">To talk to your Assistant at any time, quickly squeeze the bottom half of your phone, then release</string>
    <string name="assist_gesture_training_intro_title">Squeeze for your Assistant</string>
    <string name="assist_gesture_training_suggestion_summary">Talk to Assistant, silence calls</string>
    <string name="assist_gesture_training_suggestion_summary_including_alarms">Talk to Assistant, silence alarms and calls</string>
    <string name="assist_gesture_training_suggestion_title">Squeeze and release for Assistant</string>
    <string name="automatic_storage_manager_activation_warning">"When you're connected, you can still access photos and videos at the quality you selected for backup"</string>
    <string name="automatic_storage_manager_days_title">Remove backed up photos &amp; videos</string>
    <string name="automatic_storage_manager_deactivation_warning">"Turn off Smart Storage? 

Smart Storage won't free up space when your storage is almost full."</string>
    <string name="clear_calling_footer">"To protect your privacy, Clear Calling does not send audio or conversations to Google.

Clear Calling works on Wi‑Fi calling and most networks, not available for 3G networks."</string>
    <string name="clear_calling_title">Clear Calling</string>
    <string name="clear_calling_toggle">Use Clear Calling</string>
    <string name="clear_calling_topintro">Reduces background noises during calls</string>
    <string name="battery_saver_reminder_category">Reminders</string>
    <string name="battery_saver_reminder_switch_summary">Get reminders when battery is low</string>
    <string name="battery_saver_reminder_switch_title">Battery Saver reminders</string>
    <string name="battery_saver_schedule_category">Schedule</string>
    <string name="battery_saver_schedule_switch_summary">Battery Saver turns on when battery falls to a level you set</string>
    <string name="battery_saver_schedule_switch_title">Turn on based on battery level</string>
    <string name="battery_schedule_title">Schedule and reminders</string>
    <string name="communal_cast_summary">Cast to or from this device</string>
    <string name="communal_lock_screen_summary">Privacy, notifications, and Home controls</string>
    <string name="communal_other">Other</string>
    <string name="communal_settings_title">Hub mode</string>
    <string name="communal_smartspace_summary">Reminders, alerts, and more from Assistant</string>
    <string name="communal_smartspace_title">At a glance</string>
    <string name="communal_what_to_show">What to show</string>
    <string name="communal_what_to_use">What to use</string>
    <string name="face_confirmation_info_enough_light">Face Unlock works best when there’s enough light and you’re not wearing a mask or dark glasses.</string>
    <string name="face_confirmation_info_outside_screen">Face Unlock works from the outside screen only</string>
    <string name="face_consent">I agree</string>
    <string name="face_enrolling_participation_description">"Do you want to provide droidfood feedback for Face Unlock? We need data from a diverse set of users using the feature in real-world scenarios to make sure our Face Unlock works equally well for all our users.

If you volunteer to participate, data collected from unlock attempts (e.g. facial imagery) will be made available in the preinstalled Overlay data collection app. Your facial imagery data will be uploaded to and shared with Google ONLY upon your review and explicit consent in the Overlay app. Model performance metadata from unlock attempts will be collected via Android metrics."</string>
    <string name="face_enrolling_participation_title">Help make Face Unlock better</string>
    <string name="keywords_adaptive_charging">charge, charging, smart charging, adaptive charging, battery, battery health</string>
    <string name="security_settings_face_enroll_introduction_info_title">Keep in mind</string>
    <string name="suw_back_button_label">Back</string>
    <string name="suw_more_button_label">More</string>
    <string name="suw_next_button_label">Next</string>
    <string name="vpn_bypass_carrier_accessibility_description">Exclude carrier apps ON/OFF</string>
    <string name="vpn_bypass_carrier_app_suggestion_text">Review newly installed carrier apps</string>
    <string name="vpn_bypass_carrier_app_toggle_description">toggle carrier apps</string>
    <string name="vpn_bypass_carrier_description">Exclude carrier apps</string>
    <string name="vpn_bypass_category_title">Apps excluded from VPN</string>
    <string name="vpn_bypass_description">"Excluded apps won't use VPN. Some mobile carrier apps only work on their own networks without VPN."</string>
    <string name="system_update_entry_title">System update</string>
    <string name="system_updates_group_title">Pixel updates</string>
    <string name="software_update_entry_title">Software updates</string>
    <string name="play_application_detail_indication_summary">Check for updates</string>
    <string name="play_application_update_entry_title">App updates</string>
</resources>