<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:settings="http://schemas.android.com/apk/res-auto"
    android:key="battery_saver_schedule_and_reminders"
    android:title="@string/battery_schedule_title">
    <PreferenceCategory
        android:key="battery_saver_schedule_entry"
        android:order="10"
        android:title="@string/battery_saver_schedule_category"
        settings:controller="com.google.android.settings.fuelgauge.batterysaver.BatterySaverSchedulePreferenceController">
        <SwitchPreference
            android:key="battery_saver_base_on_percentage"
            android:order="30"
            android:summary="@string/battery_saver_schedule_switch_summary"
            android:title="@string/battery_saver_schedule_switch_title"
            settings:allowDividerBelow="false" />
        <SwitchPreference
            android:key="battery_saver_sticky"
            android:order="70"
            android:summary="@string/summary_placeholder"
            android:title="@string/battery_saver_sticky_title_new"
            settings:controller="com.android.settings.fuelgauge.batterysaver.BatterySaverStickyPreferenceController"
            settings:keywords="@string/keywords_battery_saver_sticky" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="battery_saver_reminder_entry"
        android:order="90"
        android:title="@string/battery_saver_reminder_category">
        <SwitchPreference
            android:key="battery_saver_reminders"
            android:summary="@string/battery_saver_reminder_switch_summary"
            android:title="@string/battery_saver_reminder_switch_title"
            settings:allowDividerBelow="false"
            settings:controller="com.google.android.settings.fuelgauge.batterysaver.BatterySaverReminderPreferenceController" />
    </PreferenceCategory>
</PreferenceScreen>
