<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res-auto"
    android:key="smart_battery_detail"
    android:title="@string/adaptive_charging_title"
    settings:keywords="@string/keywords_battery_adaptive_preferences">
    <com.android.settingslib.widget.IllustrationPreference
        android:key="auto_awesome_battery"
        android:selectable="false"
        settings:lottie_rawRes="@raw/lottie_adaptive_battery"
        settings:searchable="false" />
    <com.android.settingslib.widget.MainSwitchPreference
        android:key="adaptive_charging_switch"
        android:title="@string/adaptive_charging_main_switch_title"
        settings:controller="com.google.android.settings.fuelgauge.adaptivecharging.AdaptiveChargingMainSwitchPreferenceController"
        settings:keywords="@string/keywords_adaptive_charging" />
    <com.android.settingslib.widget.FooterPreference
        android:key="smart_battery_detail_footer"
        android:selectable="false"
        android:title="@string/adaptive_charging_footer"
        settings:searchable="false" />
</PreferenceScreen>
