<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res-auto"
    android:key="software_update_screen"
    android:title="@string/software_update_entry_title">
    <com.android.settingslib.widget.LayoutPreference
        android:key="illustration"
        android:layout="@layout/software_update_illustration_layout" />
    <com.google.android.settings.update.widget.CustomCardPreference
        android:icon="@drawable/software_update_group_updated"
        android:key="software_update_group"
        android:selectable="false"
        android:summary="@string/summary_placeholder"
        android:title="@string/system_updates_group_title"
        settings:roundDirection="top"
        settings:tier="first" />
    <com.google.android.settings.update.widget.CustomCardPreference
        android:key="system_update_preference"
        android:summary="@string/summary_placeholder"
        android:title="@string/system_update_entry_title"
        settings:roundDirection="middle"
        settings:tier="second">
        <intent android:action="android.settings.SYSTEM_UPDATE_SETTINGS" />
    </com.google.android.settings.update.widget.CustomCardPreference>
    <com.google.android.settings.update.widget.CustomCardPreference
        android:key="play_system_update_preference"
        android:summary="@string/summary_placeholder"
        android:title="@string/module_version"
        settings:roundDirection="bottom"
        settings:tier="second" />
    <com.google.android.settings.update.widget.CustomCardPreference
        android:icon="@drawable/software_update_app_update"
        android:key="app_updates"
        android:summary="@string/play_application_detail_indication_summary"
        android:title="@string/play_application_update_entry_title"
        android:widgetLayout="@layout/software_preference_widget_layout"
        settings:lineDivider="top"
        settings:roundDirection="bottom"
        settings:tier="first">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://play.google.com/apps" />
    </com.google.android.settings.update.widget.CustomCardPreference>
</PreferenceScreen>
