<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <com.android.setupwizardlib.view.NavigationBarButton
        android:id="@id/suw_navbar_back"
        style="@style/SuwNavBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:contentDescription="@string/suw_back_button_label"
        android:drawableStart="@drawable/suw_navbar_ic_back"
        android:drawableLeft="@drawable/suw_navbar_ic_back" />

    <View
        android:layout_width="0.0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:visibility="invisible" />

    <com.android.setupwizardlib.view.NavigationBarButton
        android:id="@id/suw_navbar_more"
        style="@style/SuwNavBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:contentDescription="@string/suw_more_button_label"
        android:drawableEnd="@drawable/suw_navbar_ic_more"
        android:drawableRight="@drawable/suw_navbar_ic_more"
        android:gravity="end|center"
        android:visibility="gone" />

    <com.android.setupwizardlib.view.NavigationBarButton
        android:id="@id/suw_navbar_next"
        style="@style/SuwNavBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:drawableEnd="@drawable/suw_navbar_ic_next"
        android:drawableRight="@drawable/suw_navbar_ic_next"
        android:gravity="end|center"
        android:text="@string/suw_next_button_label" />

</merge>
